--- a/02_learn_html_full/Quill/app.css
+++ b/02_learn_html_full/Quill/app.css
@@ -1,20 +1,29 @@
+/* ------------- GLOBAL STYLES ----------------- */
+
+/* add in universal selector later to remove default spacing properties */
+
+body {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #495057;
+}
+
+
 h1, h2, h3, h4, h5 {
 	font-weight: 700;
 	line-height: 1.2;
 	letter-spacing: -2px;
-	font-family: 'Poppins', sans-serif;
 	color: #212529;
 
 }
 
 
 h1 {
-	text-align: center;
 	font-size: 62px;
 }
 
 h2 {
-	text-align: center;
 	font-size: 48px;
 }
 
@@ -28,13 +37,6 @@ h4 {
 
 h5 {
 	font-size: 24px;
-}
-
-p, a, .small-text {
-	font-weight: 400;
-	line-height: 1.5;
-	font-family: 'Poppins', sans-serif;
-	color: #495057;
 }
 
 p {
@@ -54,17 +56,101 @@ ul {
 	font-size: 12px;
 }
 
+/* ------------- COMPONENTS ----------------- */
+
 .btn {
 	font-weight: 400;
-	font-family: 'Poppins', sans-serif;
 	font-size: 16px;
 	text-decoration: none;
+	padding: 15px 30px;
 }
 
-.btn-primary {
-	color: #339af0;
+.btn-primary:link, .btn-primary:visited {
+	color: #ffffff;
+	background-color: #339af0;
 }
 
-.btn-secondary {
-	color: #9775fa;
+
+.btn-primary:hover, .btn-primary:active {
+	color: #ffffff;
+	background-color: #1c7ed6;
+
 }
+
+.btn-secondary:link, .btn-secondary:visited {
+	color: #ffffff;
+	background-color: #9775fa;
+}
+
+.btn-secondary:hover, .btn-secondary:active {
+	color: #ffffff;
+	background-color: #7048e8;
+}
+
+.highlight {
+	color: #ffffff;
+	padding: 5px 10px;
+}
+
+.highlight-primary {
+	background-color: #339af0;
+}
+
+.highlight-secondary {
+	background-color: #9775fa;
+}
+
+.highlight-tertiary {
+	background-color: #ff922b;
+}
+
+.logo-md {
+	width: 100px;
+}
+
+.logo-sm {
+	width: 80px;
+}
+
+
+/* ------------- SECTIONS ----------------- */
+
+/* ---- HERO SECTION ---- */
+
+.hero-section {
+	text-align: center;
+}
+
+/* ---- FEATURES SECTION ---- */
+
+.features-main-heading {
+	text-align: center;
+}
+
+.feature-img {
+	width: 400px;
+}
+
+/* ---- CTA SECTION ---- */
+
+.cta-section {
+	text-align: center;
+}
+
+.cta-card {
+	text-align: center;
+	background-color: #339af0;
+	width: 1000px;
+	padding: 100px 200px;
+}
+
+/* ---- FOOTER ---- */
+
+.footer {
+	text-align: center;
+}
+
+.social-icons {
+	width: 20px;
+}
+
