--- a/02_learn_html_full/Quill/app.css
+++ b/02_learn_html_full/Quill/app.css
@@ -1,12 +1,22 @@
 /* ------------- GLOBAL STYLES ----------------- */
 
-/* add in universal selector later to remove default spacing properties */
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 
 body {
 	font-family: 'Poppins', sans-serif;
 	font-weight: 400;
 	line-height: 1.5;
 	color: #495057;
+}
+
+.container {
+	width: 1200px;
+	margin: 0 auto;
 }
 
 
@@ -46,10 +56,15 @@ p {
 a {
 	text-decoration: none;
 	font-size: 16px;
+	display: inline-block;
 }
 
 ul {
 	list-style: none;
+}
+
+span {
+	display: inline-block;
 }
 
 .small-text {
@@ -63,33 +78,53 @@ ul {
 	font-size: 16px;
 	text-decoration: none;
 	padding: 15px 30px;
+	border-radius: 8px;
 }
 
 .btn-primary:link, .btn-primary:visited {
 	color: #ffffff;
 	background-color: #339af0;
+	border: 2px solid #339af0;
 }
 
 
 .btn-primary:hover, .btn-primary:active {
 	color: #ffffff;
 	background-color: #1c7ed6;
+	border: 2px solid #1c7ed6;
 
 }
+
+.btn-primary-outline:link, .btn-primary-outline:visited {
+	color: #339af0;
+	background-color: #ffffff;
+	border: 2px solid #339af0;
+
+} 
+
+.btn-primary-outline:hover, .btn-primary-outline:active {
+	color: #1c7ed6;
+	background-color: #ffffff;
+	border: 2px solid #1c7ed6;
+} 
 
 .btn-secondary:link, .btn-secondary:visited {
 	color: #ffffff;
 	background-color: #9775fa;
+	border: 2px solid #9775fa;
+
 }
 
 .btn-secondary:hover, .btn-secondary:active {
 	color: #ffffff;
 	background-color: #7048e8;
+	border: 2px solid #7048e8;
 }
 
 .highlight {
 	color: #ffffff;
 	padding: 5px 10px;
+	border-radius: 4px;
 }
 
 .highlight-primary {
@@ -115,16 +150,41 @@ ul {
 
 /* ------------- SECTIONS ----------------- */
 
+
+/* ---- NAVBAR ---- */
+.navbar {
+	margin-bottom: 200px;
+}
+
+
 /* ---- HERO SECTION ---- */
 
 .hero-section {
 	text-align: center;
+	margin-bottom: 300px;
+}
+
+.hero-heading {
+	margin-bottom: 10px;
+}
+
+.hero-paragraph {
+	margin-bottom: 50px;
 }
 
 /* ---- FEATURES SECTION ---- */
 
+.features-section {
+	margin-bottom: 300px;
+}
+
 .features-main-heading {
 	text-align: center;
+	margin-bottom: 80px;
+}
+
+.feature-headings {
+	margin-bottom: 20px;
 }
 
 .feature-img {
@@ -135,6 +195,7 @@ ul {
 
 .cta-section {
 	text-align: center;
+	margin-bottom: 300px;
 }
 
 .cta-card {
@@ -142,6 +203,12 @@ ul {
 	background-color: #339af0;
 	width: 1000px;
 	padding: 100px 200px;
+	border-radius: 20px;
+	margin: 0 auto;
+}
+
+.cta-heading {
+	margin-bottom: 30px;
 }
 
 /* ---- FOOTER ---- */
