--- a/02_learn_html_full/Quill/app.css
+++ b/02_learn_html_full/Quill/app.css
@@ -15,7 +15,7 @@ body {
 }
 
 .container {
-	width: 1200px;
+	max-width: 1200px;
 	margin: 0 auto;
 }
 
@@ -188,7 +188,8 @@ span {
 }
 
 .feature-img {
-	width: 400px;
+	max-width: 400px;
+	width: 100%;
 }
 
 /* ---- CTA SECTION ---- */
@@ -201,7 +202,7 @@ span {
 .cta-card {
 	text-align: center;
 	background-color: #339af0;
-	width: 1000px;
+	max-width: 1000px;
 	padding: 100px 200px;
 	border-radius: 20px;
 	margin: 0 auto;
